BUILD: Passage à vitejs

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -29,6 +29,16 @@ nav {
     &:last-child {
       gap: 0.4rem;
     }
+
+    svg {
+      width: 24px;
+      height: 24px;
+      fill: white;
+      transition: fill 0.3s;
+      &:hover {
+        fill: #f5f5f5;
+      }
+    }
   }
 
   img {
